# meta_plugin_protocol

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.json
.claude/skills/: meta-exec.md  meta-git.md  meta-plugins.md  meta-safety.md  meta-worktree.md
.github/workflows/: auto-format.yml  ci.yml  notify-downstream.yml
.handoff/context/: capsule.json
.kb/: config.toml
