[package]
name = "meta_plugin_protocol"
version = "0.2.25"
edition = "2021"
license = "MIT"
repository = "https://github.com/FlexNetOS/meta_plugin_protocol"
description = "Shared plugin protocol types for meta subprocess plugins"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
indexmap = { version = "2", features = ["serde"] }
